k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-directory
  labels:
    name: employee-directory
    environment: dev
