k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: employee-directory
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
     app: postgres
  template:
    metadata:
     labels:
       app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres

          # Health checks
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - admin
            
            initialDelaySeconds: 30
            periodSeconds: 10
          
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - admin
            
            initialDelaySeconds: 5
            periodSeconds: 5
          
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
  
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
