k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: employee-directory
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

    # health probe setting
    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-399"
    appgw.ingress.kubernetes.io/health-probe-interval: "30"
    appgw.ingress.kubernetes.io/health-probe-timeout: "30"

    # connection draining
    appgw.ingress.kubernetes.io/connection-draining: "true"
    appgw.ingress.kubernetes.io/connection-draining-timeout: "30"

    # request-timeout
    appgw.ingress.kubernetes.io/request-timeout: "30"
spec:
  rules:
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: frontend-service
           port:
            number: 80
      - path: /api/
        pathPrefix: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
